syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.bluecc.hubs.stub";
option java_outer_classname = "OrderShoppinglistProto";

package domain;

import "google/protobuf/timestamp.proto";
import "google/protobuf/any.proto";
import "google/protobuf/struct.proto";

import "date.proto";
import "timeofday.proto";
import "routines.proto";
import "condition.proto";
import "relay.proto";

// flat-ent: Shopping List
message ShoppingListFlatData {
    option (routines.entity_type) = "ShoppingList";
    option (routines.keys).keys = "shopping_list_id";
    option (routines.keys).combine = false;
    option (routines.flat) = true;
    option (routines.has_table) = true;
    // keys: shoppingListId
    string shopping_list_id = 1 [(routines.opts).field_type = "id", (google.api.graphql.relay_options).id = true];
    string shopping_list_type_id = 2 [(routines.opts).field_type = "id"];
    string parent_shopping_list_id = 3 [(routines.opts).field_type = "id"];
    string product_store_id = 4 [(routines.opts).field_type = "id"];
    string visitor_id = 5 [(routines.opts).field_type = "id"];
    string party_id = 6 [(routines.opts).field_type = "id"];
    string list_name = 7 [(routines.opts).field_type = "name"];
    string description = 8 [(routines.opts).field_type = "description"];
    routines.Indicator is_public = 9 [(routines.opts).field_type = "indicator"];
    routines.Indicator is_active = 10 [(routines.opts).field_type = "indicator"];
    string currency_uom = 11 [(routines.opts).field_type = "id"];
    string shipment_method_type_id = 12 [(routines.opts).field_type = "id"];
    string carrier_party_id = 13 [(routines.opts).field_type = "id"];
    string carrier_role_type_id = 14 [(routines.opts).field_type = "id"];
    string contact_mech_id = 15 [(routines.opts).field_type = "id"];
    string payment_method_id = 16 [(routines.opts).field_type = "id"];
    string recurrence_info_id = 17 [(routines.opts).field_type = "id"];
    google.protobuf.Timestamp last_ordered_date = 18 [(routines.opts).field_type = "date-time"];
    google.protobuf.Timestamp last_admin_modified = 19 [(routines.opts).field_type = "date-time"];
    string product_promo_code_id = 20 [(routines.opts).field_type = "id"];
    google.protobuf.Timestamp last_updated_tx_stamp = 21 [(routines.opts).field_type = "date-time"];
    google.protobuf.Timestamp created_tx_stamp = 22 [(routines.opts).field_type = "date-time"];
    string tenant_id = 23 [(routines.opts).field_type = "id"];
     

    // extra
    google.protobuf.Struct extra = 42;
    map<string, google.protobuf.Any> attachments = 43 ;
}

message ShoppingListKey{
    string shopping_list_id = 1 [(routines.opts).field_type = "id", (google.api.graphql.relay_options).id = true];
}

message ShoppingListList{
    repeated ShoppingListFlatData values=1;
    // A token to retrieve next page of results.
    // Pass this value in the
    // [ListRequest.page_token][google.example.library.v1.ListRequest.page_token]
    // field in the subsequent call to `ListShoppingLists` method to retrieve the next
    // page of results.
    string next_page_token = 2;
    string region_id=3;
}

// Shopping List Item
message ShoppingListItemData {
    option (routines.entity_type) = "ShoppingListItem";
    option (routines.keys).keys = "shopping_list_id, shopping_list_item_seq_id";
    option (routines.keys).combine = true;
    option (routines.flat) = true;
    option (routines.has_table) = true;
    // keys: shoppingListId, shoppingListItemSeqId
    // fields
    string shopping_list_id = 1 [(routines.opts).field_type = "id"];
    string shopping_list_item_seq_id = 2 [(routines.opts).field_type = "id"];
    string product_id = 3 [(routines.opts).field_type = "id"];
    routines.FixedPoint quantity = 4 [(routines.opts).field_type = "fixed-point"];
    routines.Currency modified_price = 5 [(routines.opts).field_type = "currency-precise"];
    google.protobuf.Timestamp reserv_start = 6 [(routines.opts).field_type = "date-time"];
    routines.FixedPoint reserv_length = 7 [(routines.opts).field_type = "fixed-point"];
    routines.FixedPoint reserv_persons = 8 [(routines.opts).field_type = "fixed-point"];
    routines.FixedPoint quantity_purchased = 9 [(routines.opts).field_type = "fixed-point"];
    string config_id = 10 [(routines.opts).field_type = "id"];
    google.protobuf.Timestamp last_updated_tx_stamp = 11 [(routines.opts).field_type = "date-time"];
    google.protobuf.Timestamp created_tx_stamp = 12 [(routines.opts).field_type = "date-time"];
    string id = 13 [(routines.opts).field_type = "id", (google.api.graphql.relay_options).id = true];
            
             

    // extra
    google.protobuf.Struct extra = 18;
    map<string, google.protobuf.Any> attachments = 19;
}


message ShoppingListItemKey{
    string shopping_list_id = 1 [(routines.opts).field_type = "id"];
    string shopping_list_item_seq_id = 2 [(routines.opts).field_type = "id"];
}

message ShoppingListItemList{
    repeated ShoppingListItemData values=1;
    // A token to retrieve next page of results.
    // Pass this value in the
    // [ListRequest.page_token][google.example.library.v1.ListRequest.page_token]
    // field in the subsequent call to `ListShoppingListItems` method to retrieve the next
    // page of results.
    string next_page_token = 2;
    string region_id=3;
}


